src/views/src/output/snapshots/composable_views__output__continuous.snap
---
source: src/views/src/output/mod.rs
expression: output.into_inner()
---
<svg height="128" viewBox="0 0 256 128" width="256" xmlns="http://www.w3.org/2000/svg">
<path d="M16,59.492508 C16,16,16,16,59.492508,16 L196.50749,16 C240,16,240,16,240,59.492508 L240,84.50749 C240,128,240,128,196.50749,128 L59.492508,128 C16,128,16,128,16,84.50749 z" fill="#000000ff" transform="matrix(1 0 0 1 0 0)"/>
</svg>
